# foundation_backend

./: .flake8  .gitignore  Dockerfile  Makefile  docker-compose-prod.yml  docker-compose.yml  gunicorn.dev.py  pyproject.toml
.github/workflows/: cicd.yml
foundation_backend/: README.rst  conftest.py  manage.py
foundation_backend/example_app/: apps.py  urls.py  views.py
foundation_backend/example_app/tests/: test_one.py
foundation_backend/example_app/tests/fixtures/: __init__.py
foundation_backend/project/: urls.py  wsgi.py
foundation_backend/project/settings/: __init__.py  base.py  envvars.py  logging.py
foundation_backend/project/settings/template/: settings.dev.py
templates/: base.html  test.html
test_example/: apps.py  models.py  urls.py  views.py
